0_fabvn.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: fabric
---
apiVersion: v1
kind: Pod
metadata:
  name: fab-nginx
  labels:
    app: fab-nginx
spec:
  containers:
  - name: webserver
    image: docker.io/library/nginx:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fab-nginx
  annotations:
    service.contrail.juniper.net/externalNetwork: fabric/fabvn
spec:
  type: LoadBalancer
  selector:
    app: fab-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: "1"
