tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: registry
  namespace: default
  labels:
    app: registry
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
  - "registry.default.svc.cluster1.local"
  rules:
  - backendRefs:
    - name: registry
      port: 5000
